--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -5,5 +5,23 @@ on:
     branches:
       - '*'
   pull_request:
+    types: [opened, synchronize, reopened, closed]
+  pull_request_review:
+    types: [submitted]
+  pull_request_review_comment:
+    types: [created, edited, deleted]
   merge:
+    types: [closed]
 
+jobs:
+  send-webhook:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Send webhook
+      uses: distributhor/webhook-action@v2
+      with:
+        url: ${{ secrets.WEBHOOK_URL }}
+        method: POST
+        headers: '{"Content-Type": "application/json"}'
+        data: '{"event": "${{ github.event_name }}", "payload": "${{ toJson(github.event) }}" }'
